# freetype-direct-gl

./: CMakeLists.txt
src/: CMakeLists.txt  freetype-direct-gl.pc.in
src/font/: CMakeLists.txt
src/render/: CMakeLists.txt
src/text/: CMakeLists.txt
src/utils/: CMakeLists.txt
